--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <html>
 <head>
-    <title>Aprendiendo html</title>
+    <meta charset="UTF-8">
+    <title>La Ñeka</title>
+    <link href="bonita.css" rel="stylesheet">
 </head>
 
 <body>
 
-  <h1>La <em>Ñeka</em> hace miau.</h1>
-  <h2>Sus familiares</h2>
-  <p>La Ñeka tiene una Hija llamada <strong>Michi</strong> y su abuela es la <strong>Kiti</strong>.</p>
-  <h2>¿Que le gusta hacer?</h2>
-  <p>Le gusta mimir durante todo el dia y gruñir<em> uwu</em>.</p>
-  <p>Hay que <em>rezarle</em> a la <em>Ñeka</em> para que nos <strong>bendiga a todos</strong>.</p>
-  <br/>
-  <p><a href="Curriculum.html">Ir al curriculum</a></p>
+  <h1>¿Por qué la <em>Ñeka</em> es la <strong>mejor gata del mundo</strong>?</h1>
+    <p>La <em>Ñeka</em> hace <strong>¡¡¡Miau!!!</strong></p> 
+    <img src="neka1.jpg" alt="La encarnación de la belleza" width="600" height="500">
+    <h2>Sus familiares</h2>
+    <p>La Ñeka tiene una Hija llamada <strong>Michi</strong> y su abuela es la <strong>Kiti</strong>./<p>
+    <h3>Recordatorio de la hija de la Ñeka...</h3>
+    <img src="hija4.jpg" width="600" height="450">
+    <h2>¿Que le gusta hacer?</h2>
+    <p>Le gusta mimir durante todo el dia y gruñir<em> uwu</em>.</p>
+    <p>Hay que <em>rezarle</em> a la <em>Ñeka</em> para que nos <strong>bendiga a todos</strong>.</p>
+    <iframe width="420" height="315"
+    src="https://www.youtube.com/embed/5SW7VPVxQiQ">
+    </iframe> 
+    <br/>
+    <p><a href="vida_de_la_neka.html">¿Qué ha hecho la Ñeka a lo largo de su gran y magnifica vida?</a></p>
 </body>
 </html>
