Update de hijos de :eka

--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
                     <p>Es su querida madre</p>
                 </li>
                 <li>Michi <br />
-                    <p>Es su hermosa hija</p>
+                    <p>Es una de sus hermosa hija</p>
+                </li>
+                <li>El Princeso <br />
+                    <p>Es su hijo mas gafo</p>
+                </li>
+                <li>Chimuela <br />
+                    <p>Es otra de sus hermosas hijas</p>
                 </li>
             </ul>
          </div>
@@ -66,7 +72,7 @@
 
         <!-- Media section start -->
          <div class="section">
-            <h1><span>La Ñeja jugando</span></h1>
+            <h1><span>La Ñeka jugando</span></h1>
             <iframe height="240" width="480" src="https://www.youtube.com/embed/5SW7VPVxQiQ" allowfullscreen frameborder="0"></iframe>
          </div>
         <!-- Media section end -->
